tests/errors/test_34.x
// Unknown array size at compile time

let x: i64[];

fn main() -> i64 {}